--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/actualizacion-poliza/actualizacion-poliza.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/actualizacion-poliza/actualizacion-poliza.component.html
@@ -332,4 +332,4 @@
   </mat-card-content>
 </mat-card>
 
-<app-form-observacion-actualizacion-poliza></app-form-observacion-actualizacion-poliza>
+<app-form-observacion-actualizacion-poliza *ngIf="listaTipoObservacionLiquidacionContratacion && listaMenu && contratacionProyectoId" [contratacionProyectoId] = "contratacionProyectoId" [contratoPolizaActualizacionId] = "contratoPolizaActualizacionId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.actualizacionPoliza" [menuId]="listaMenu.aprobarSolicitudLiquidacionContratacion"></app-form-observacion-actualizacion-poliza>
