--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/expansion-panel/expansion-panel.component.html
@@ -31,7 +31,8 @@
           Liquidación de contrato de interventoria
         </mat-panel-title>
       </mat-expansion-panel-header>
-      Liquidación de contrato de interventoria
+
+      <app-tabla-liquidacion-contrato-interventoria></app-tabla-liquidacion-contrato-interventoria>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
