--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-anexos/tabla-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-anexos/tabla-informe-anexos.component.html
@@ -1,13 +1,3 @@
-<!-- <div class="busqueda">
-  <mat-form-field appearance="outline" class="busqueda--input">
-    <mat-label>Buscador / Filtro</mat-label>
-    <input matInput #filtro (keyup)="applyFilter($event)" />
-  </mat-form-field>
-  <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
-    <img src="assets/img/icon/lupa.svg" alt="Buscar" />
-  </button>
-</div> -->
-
 <div class="table-responsive mb-2em text-center">
   <table mat-table [dataSource]="dataSource" matSort class="table-gris">
     <!-- numero Column -->
@@ -31,11 +21,11 @@
     </ng-container>
 
     <!-- tipoAnexo Column -->
-    <ng-container matColumnDef="tipoAnexo">
+    <ng-container matColumnDef="tipoAnexoString">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Tipo de anexo
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.tipoAnexo }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.tipoAnexoString }}</td>
     </ng-container>
 
     <!-- ubicacion Column -->
@@ -44,14 +34,26 @@
         Ubicación (url/radicado)
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
-          [href]="element.ubicacion"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="ruta-url"
-        >
-          {{ element.ubicacion }}
-        </a>
+        <div *ngIf="element.calificacionCodigo === '1'">
+          <!--Físico-->
+          <span *ngIf="element.tipoAnexo === '1'">
+            <b>SAC:</b>
+            {{ element.numRadicadoSac }} <br />
+            <b>Fecha:</b>
+            {{ element.fechaRadicado | date: 'dd/MM/yyyy' }}
+          </span>
+          <!--Digital-->
+          <span *ngIf="element.tipoAnexo === '2'">
+            <a
+              [href]="element.urlSoporte"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="ruta-url"
+            >
+              {{ element.urlSoporte }}
+            </a>
+          </span>
+        </div>
       </td>
     </ng-container>
 
