--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-final/tabla-informe-final.component.html
@@ -1,13 +1,3 @@
-<!-- <div class="busqueda">
-  <mat-form-field appearance="outline" class="busqueda--input">
-    <mat-label>Buscador / Filtro</mat-label>
-    <input matInput #filtro (keyup)="applyFilter($event)" />
-  </mat-form-field>
-  <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
-    <img src="assets/img/icon/lupa.svg" alt="Buscar" />
-  </button>
-</div> -->
-
 <div class="table-responsive mb-2em text-center">
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- fechaEnvio Column -->
@@ -31,11 +21,11 @@
     </ng-container>
 
     <!-- llaveMEN Column -->
-    <ng-container matColumnDef="llaveMEN">
+    <ng-container matColumnDef="llaveMen">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Llave MEN
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.llaveMEN }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
     </ng-container>
 
     <!-- tipoIntervencion Column -->
@@ -73,7 +63,7 @@
     </ng-container>
 
     <!-- id Column -->
-    <ng-container matColumnDef="id">
+    <ng-container matColumnDef="contratacionProyectoId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Gestión
       </th>
@@ -83,7 +73,7 @@
           mat-raised-button
           color="accent"
           class="btn-table"
-          [routerLink]="['aprobarInformeFinal', element.id]"
+          [routerLink]="['aprobarInformeFinal', element.proyectoId]"
         >
           Aprobar
         </a>
